--- a/pages/0-0-0_gdm.md
+++ b/pages/0-0-0_gdm.md
@@ -3,10 +3,10 @@ GDM
 <small>
 Bachelor in de grafische en digitale media
 ------------------------------------------
-### Arteveldehogeschool
+### [Arteveldehogeschool](http://www.arteveldehogeschool.be)
 </small>
 <small lang="en">
 Bachelor of graphic and digital media
 -------------------------------------
-### Artevelde University College Ghent
+### [Artevelde University College Ghent](http://www.arteveldeuniversitycollege.be)
 </small>
